# FITTER

./: CHANGELOG.md  CMakeLists.txt  git-flow-version
cmake/: fitter_meta_info.json.in
src/lib/: fitter.f90  fitter_snippet.f90
